--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -95,29 +95,77 @@ body {
 .main-content {
     display: flex;
     flex-direction: column;
+    
 }
 
+/* code that affects the main content about section*/
 .about-section {
     display: flex;
-    flex-direction: row;
-    flex-grow: 2;
+    flex-direction: row; 
 }
 
-.about-section-title {
-    display: flex;
-    flex-direction: row;
-    flex-grow: 3;
+.about-section-title{
+    
+    color: #70e000;
 }
 
-.about-section-content {
-    display: flex;
-    flex-direction: row;
-    flex-grow: 1;
+.about-section-content{
+    
     flex-wrap: wrap;
+    color: #70e000;
 }
 
+/* code that affects the main content work experience section*/
 
+.experience-section {
+    display: flex;
+    flex-direction: row; 
+}
 
+.experience-section-title {
+    
+    color: #70e000;
+}
+
+.experience-section-content {
+    
+    flex-wrap: wrap;
+    color: #70e000;
+}
+
+/* code that affects the main content completed projects section*/
+
+.completed-projects-section {
+    display: flex;
+    flex-direction: row; 
+}
+
+.completed-projects-section-title {
+    
+    color: #70e000;
+}
+
+.completed-projects-section-content > ul {
+    display: flex;
+    flex-wrap: wrap;
+    list-style-type: none;
+}
+
+.completed-projects-section-content > ul > li {
+    height: 40vh;
+    flex-grow: 1;
+}
+
+.completed-projects-section-content-img {
+    max-height: 100%;
+    min-width: 100%;
+    object-fit: cover;
+    vertical-align: bottom;
+}
+
+.completed-projects-section-content > ul > li:last-child {
+    flex-grow: 10;
+  }
 
 /* mobile viewport styles */
 @media screen and (max-width: 576px) {
@@ -143,5 +191,25 @@ body {
         height: 70px;
         
     }
+
+    /* responsive code for the main content about me*/
+
+    .about-section {
+        display: flex;
+        flex-direction: column; 
+    }
+
+    /* responsive code for the main content experience section*/
+
+    .experience-section {
+        display: flex;
+        flex-direction: column; 
+    }
+
+    /* code that affects the main content completed projects content section*/
+
+    .completed-projects-section-content > ul > li {
+        height: 80vh;
+      }
     
   }
